--- a/GDUTIdleCircle/manifest.json
+++ b/GDUTIdleCircle/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "GDUTIdleCircle",
+    "name" : "GDUTIdleCircleDemo",
     "appid" : "",
     "description" : "",
     "versionName" : "1.0.0",
